test/integration/bad/lang/stanc.expected
  $ ../../../../../install/default/bin/stanc bad1.stan
Syntax error in 'bad1.stan', line 1, column 8 to column 8, parsing error:
   -------------------------------------------------
     1:  model { 
                 ^
   -------------------------------------------------

Variable declaration, statement or "}" expected.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad1.stanfunctions
Syntax error in 'bad1.stanfunctions', line 1, column 5 to column 6, parsing error:
   -------------------------------------------------
     1:  int x;
              ^
   -------------------------------------------------

"(" expected after function name.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad10.stan
Semantic error in 'bad10.stan', line 2, column 8 to column 11:
   -------------------------------------------------
     1:  data {
     2:     real y__;
                 ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'y__' clashes with reserved keyword.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad11.stan
Semantic error in 'bad11.stan', line 2, column 2 to column 12:
   -------------------------------------------------
     1:  parameters {
     2:    int theta;
           ^
     3:  }
     4:  model {
   -------------------------------------------------

(Transformed) Parameters cannot be integers.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad12.stan
Semantic error in 'bad12.stan', line 2, column 2 to column 6:
   -------------------------------------------------
     1:  generated quantities {
     2:    beta = 1;
           ^
     3:  }
   -------------------------------------------------

Cannot assign to global variable 'beta' declared in previous blocks.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad2.stan
Semantic error in 'bad2.stan', line 1, column 34 to column 35:
   -------------------------------------------------
     1:  data { array[3] real a; } model { a = 2.0; }
                                           ^
   -------------------------------------------------

Cannot assign to global variable 'a' declared in previous blocks.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad2.stanfunctions
Syntax error in 'bad2.stanfunctions', line 5, column 0 to column 1, parsing error:
   -------------------------------------------------
     3:  }
     4:  
     5:  }
         ^
   -------------------------------------------------

Only function definitions/declarations are expected in '.stanfunctions' file
[exit 1]
  $ ../../../../../install/default/bin/stanc bad3.stan
Syntax error in 'bad3.stan', line 1, column 21 to column 22, parsing error:
   -------------------------------------------------
     1:  data { real a; matrix(2,3) b; } model { a = b; }
                              ^
   -------------------------------------------------

"[" expression "," expression "]" expected for matrix sizes.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad3.stanfunctions
Syntax error in 'bad3.stanfunctions', line 1, column 0 to column 5, parsing error:
   -------------------------------------------------
     1:  while;
         ^
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".
[exit 1]
  $ ../../../../../install/default/bin/stanc bad4.stan
Semantic error in 'bad4.stan', line 1, column 44 to column 48:
   -------------------------------------------------
     1:  data { array[5] real a; } model { for (n in a[1]:5) a[n] = n; }
                                                     ^
   -------------------------------------------------

Lower bound of for-loop must be of type int. Instead found type real.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad5.stan
Semantic error in 'bad5.stan', line 3, column 6 to column 10:
   -------------------------------------------------
     1:  transformed data {
     2:    real y;
     3:    y = lp__;
               ^
     4:  }
     5:  model {
   -------------------------------------------------

Identifier 'lp__' clashes with reserved keyword.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad6.stan
Semantic error in 'bad6.stan', line 7, column 3 to column 4:
   -------------------------------------------------
     5:     real z;
     6:     
     7:     y = 10.0;
            ^
     8:  }
     9:  model {
   -------------------------------------------------

Cannot assign to global variable 'y' declared in previous blocks.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad7.stan
Semantic error in 'bad7.stan', line 7, column 2 to column 3:
   -------------------------------------------------
     5:    real z;
     6:  
     7:    y = 10.0;
           ^
     8:  }
     9:  model { 
   -------------------------------------------------

Cannot assign to global variable 'y' declared in previous blocks.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad8.stan
Semantic error in 'bad8.stan', line 5, column 4 to column 5:
   -------------------------------------------------
     3:  }
     4:  model {
     5:      y = 10.0;
             ^
     6:  }
   -------------------------------------------------

Cannot assign to global variable 'y' declared in previous blocks.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad9.stan
Semantic error in 'bad9.stan', line 5, column 3 to column 9:
   -------------------------------------------------
     3:  }
     4:  parameters {
     5:     int N;
            ^
     6:     array[N] real z;
     7:  }
   -------------------------------------------------

(Transformed) Parameters cannot be integers.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_bar.stan
Semantic error in 'bad_bar.stan', line 3, column 9 to column 28:
   -------------------------------------------------
     1:  generated quantities {
     2:     vector[3] foo;
     3:     foo = rep_vector(1.2 | 3);
                  ^
     4:  }
   -------------------------------------------------

Only functions with names ending in _lpdf, _lupdf, _lpmf, _lupmf, _cdf, _lcdf, _lccdf can make use of conditional notation.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_bounds1.stan
Syntax error in 'bad_bounds1.stan', line 2, column 15 to column 17, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real<lower=1 && 2> x;
                        ^
     3:  }
     4:  parameters {
   -------------------------------------------------

Ill-formed expression. Expected expression (not containing binary logical operators).
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_decl1.stan
Syntax error in 'bad_decl1.stan', line 2, column 10 to column 13, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real x, int y;
                   ^
     3:  }
   -------------------------------------------------

Found a type ('int') where an identifier was expected.
All variables declared in a comma-separated list must be of the same type.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_decl2.stan
Syntax error in 'bad_decl2.stan', line 2, column 13 to column 14, parsing error:
   -------------------------------------------------
     1:  data {
     2:    array[3,3] x;
                      ^
     3:  }
   -------------------------------------------------

Expected non-array type after "array" declaration.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_decl3.stan
Syntax error in 'bad_decl3.stan', line 3, column 28 to column 29, parsing error:
   -------------------------------------------------
     1:  functions {
     2:      void test(real alpha, real tau, real beta, real delta) {
     3:        real t, x = tau, beta * alpha; // this errors saying
                                     ^
     4:        return;
     5:      }
   -------------------------------------------------

Expected a new identifier after comma in declaration.
All variables declared must be of the same type, and any initializing assignment must follow the identifier before the next comma.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_decl4.stan
Syntax error in 'bad_decl4.stan', line 2, column 10 to column 16, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real x, reject;
                   ^
     3:  }
   -------------------------------------------------

Expected a new identifier but found reserved keyword 'reject'.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_function.stan
Semantic error in 'bad_function.stan', line 3, column 3 to column 7:
   -------------------------------------------------
     1:  generated quantities {
     2:     real x;
     3:     x();
            ^
     4:  }
   -------------------------------------------------

A non-returning function was expected but a non-function value 'x' was supplied.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_function2.stan
Semantic error in 'bad_function2.stan', line 3, column 3 to column 7:
   -------------------------------------------------
     1:  generated quantities {
     2:     real x;
     3:     y();
            ^
     4:  }
   -------------------------------------------------

A non-returning function was expected but an undeclared identifier 'y' was supplied.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_lmpf.stan
Semantic error in 'bad_lmpf.stan', line 2, column 2 to line 4, column 3:
   -------------------------------------------------
     1:  functions {
     2:    real my_dist_lpmf(real foo){
           ^
     3:      return 1.0;
     4:    }
   -------------------------------------------------

Probability mass functions require integer variates (first argument). Instead found type real.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_lpdf.stan
Semantic error in 'bad_lpdf.stan', line 2, column 2 to line 4, column 3:
   -------------------------------------------------
     1:  functions {
     2:    real my_dist_lpdf(){
           ^
     3:      return 1.0;
     4:    }
   -------------------------------------------------

Probability density functions require real variates (first argument).
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_periods_data.stan
Syntax error in 'bad_periods_data.stan', line 2, column 7, lexing error:
   -------------------------------------------------
     1:  data {
     2:    real x.y;
                 ^
     3:  }
     4:  parameters {
   -------------------------------------------------

Invalid character found.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_periods_gqs.stan
Syntax error in 'bad_periods_gqs.stan', line 8, column 7, lexing error:
   -------------------------------------------------
     6:  }
     7:  generated quantities {
     8:    real x.y;
                 ^
     9:    x.y = z * 2;
    10:  }
   -------------------------------------------------

Invalid character found.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_periods_local.stan
Syntax error in 'bad_periods_local.stan', line 5, column 7, lexing error:
   -------------------------------------------------
     3:  }
     4:  model {
     5:    real x.y;
                 ^
     6:    z ~ normal(x.y,1);
     7:  }
   -------------------------------------------------

Invalid character found.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_periods_params.stan
Syntax error in 'bad_periods_params.stan', line 2, column 7, lexing error:
   -------------------------------------------------
     1:  parameters {
     2:    real x.y;
                 ^
     3:  }
     4:  model {
   -------------------------------------------------

Invalid character found.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_periods_tdata.stan
Syntax error in 'bad_periods_tdata.stan', line 2, column 7, lexing error:
   -------------------------------------------------
     1:  transformed data {
     2:    real x.y;
                 ^
     3:  }
     4:  parameters {
   -------------------------------------------------

Invalid character found.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_periods_tparams.stan
Syntax error in 'bad_periods_tparams.stan', line 2, column 7, lexing error:
   -------------------------------------------------
     1:  transformed parameters {
     2:    real x.;
                 ^
     3:    x. = 1.0;
     4:  }
   -------------------------------------------------

Invalid character found.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_promotion1.stan
Semantic error in 'bad_promotion1.stan', line 9, column 2 to column 13:
   -------------------------------------------------
     7:  model {
     8:    array[3] int d = {1,2,3};
     9:    printer(d);
           ^
    10:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'printer':
(array[] int)
Available signatures:
(array[] vector) => void
  The first argument must be array[] vector but got array[] int
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_promotions2.stan
Semantic error in 'bad_promotions2.stan', line 9, column 8 to column 17:
   -------------------------------------------------
     7:  model {
     8:    array[3] int d = {1,2,3};
     9:    print(nested(d));
                 ^
    10:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'nested':
(array[] int)
Available signatures:
(array[,] complex) => real
  The first argument must be array[,] complex but got array[] int
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_promotions3.stan
Semantic error in 'bad_promotions3.stan', line 9, column 2 to column 17:
   -------------------------------------------------
     7:  model {
     8:    array[3] int d = {1,2,3};
     9:    printer({d,d});
           ^
    10:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'printer':
(array[,] int)
Available signatures:
(array[] real) => void
  The first argument must be array[] real but got array[,] int
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_promotions4.stan
Semantic error in 'bad_promotions4.stan', line 9, column 2 to column 13:
   -------------------------------------------------
     7:  model {
     8:    array[3] real d = {1,2.2,3};
     9:    printer(d);
           ^
    10:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'printer':
(array[] real)
Available signatures:
(array[] int) => void
  The first argument must be array[] int but got array[] real
[exit 1]
  $ ../../../../../install/default/bin/stanc good_all.stan
Semantic error in 'good_all.stan', line 25, column 2 to column 3:
   -------------------------------------------------
    23:  
    24:  model {
    25:    m = m;
           ^
    26:    rv = m[1];
    27:    s = m[1,2];
   -------------------------------------------------

Cannot assign to global variable 'm' declared in previous blocks.
[exit 1]
  $ ../../../../../install/default/bin/stanc incomplete.stan
Syntax error in 'incomplete.stan', line 2, column 18 to column 19, parsing error:
   -------------------------------------------------
     1:  transformed data {
     2:    real x = 2.0 .^ ;
                           ^
     3:  }
   -------------------------------------------------

Found an incomplete binary expression - are you missing the right hand side?
[exit 1]
  $ ../../../../../install/default/bin/stanc incomplete2.stan
Syntax error in 'incomplete2.stan', line 2, column 15 to column 20, parsing error:
   -------------------------------------------------
     1:  transformed data {
     2:    1.0 .^ foo[] while
                        ^
     3:  }
   -------------------------------------------------

Unexpected input after the conclusion of a valid expression.
You may be missing a "," between expressions, an operator, or a terminating "}", ")", "]", or ";".
[exit 1]
  $ ../../../../../install/default/bin/stanc incomplete3.stan
Syntax error in 'incomplete3.stan', line 2, column 10 to column 15, parsing error:
   -------------------------------------------------
     1:  transformed data {
     2:    2.0 %/% while (1) { print("hi"); }
                   ^
     3:  }
   -------------------------------------------------

Found an incomplete binary expression - are you missing the right hand side?
[exit 1]
  $ ../../../../../install/default/bin/stanc incomplete4.stan
Syntax error in 'incomplete4.stan', line 2, column 13 to column 14, parsing error:
   -------------------------------------------------
     1:  transformed data {
     2:    2.0 %/% 1.0; while (1) { print("hi"); }
                      ^
     3:  }
   -------------------------------------------------

Ill-formed phrase. Found an expression where we expected a statement.
[exit 1]
  $ ../../../../../install/default/bin/stanc incomplete5.stan
Syntax error in 'incomplete5.stan', line 3, column 0 to column 0, parsing error:
   -------------------------------------------------
     1:  transformed data {
     2:    if (2.0) ;
         ^
   -------------------------------------------------

Ill-formed block. Expected a statement, variable declaration, or just "}".
[exit 1]
  $ ../../../../../install/default/bin/stanc incomplete6.stan
Syntax error in 'incomplete6.stan', line 3, column 16 to column 21, parsing error:
   -------------------------------------------------
     1:  transformed data {
     2:    print(foo[2.0]);
     3:    real x = sars[while (0)];
                         ^
     4:  }
   -------------------------------------------------

Ill-formed expression. We expect a comma separated list of expressions, followed by "]".
[exit 1]
  $ ../../../../../install/default/bin/stanc reused_name.stan
Semantic error in 'reused_name.stan', line 4, column 14 to column 15:
   -------------------------------------------------
     2:      vector[3] e;
     3:      // e is selected because it is also a Stan-math function 'e()'
     4:      vector[3] e;
                       ^
     5:  }
   -------------------------------------------------

Identifier 'e' is already in use.
[exit 1]
  $ ../../../../../install/default/bin/stanc unterminated_comment.stan
Syntax error in 'unterminated_comment.stan', line 4, column -1, lexing error:
   -------------------------------------------------
     2:  never
     3:  ends
         ^
   -------------------------------------------------

Unexpected end of input
[exit 1]
